public/css/module.less
div.images {
    h3 {
        clear: both;
    }

    img.svg {
        float: left;
        border: none;
    }

}

div.images.monitored-object-detail-view {
  display: block;

  img.graphiteImg {
    width: 100%;
    display: block;
  }
}

ul.legend {
  background: #eee;
  list-style-type: none;
  margin: 0;
  padding: 1em;
  border: 1px solid #aaa;
  max-width: 40em;

  li {
    display: inline-block;
    width: 13em;
  }

  li div.color {
    width: 1em;
    height: 1em;
    border: 1px solid #666;
    margin-right: 0.5em;
    float: left;
  }

  li a {
    color: inherit;
  }

  li.disabled {
    div.color {
      border-style: dotted;
    }

    a {
      font-style: italic;
      text-decoration: line-through;
    }
  }
}

.timerangepicker-container {
  display: flex;
  padding: .25em 0;

  .button-link {
    line-height: 1.75;
    width: 2.25em;

    i {
      display: inline-block;
      width: 100%;
      text-align: center;
    }

    i:before {
      margin-right: 0;
    }
  }
}

form[name=form_timerangepickercommon_graphite] {
  display: inline-flex;
  flex: 1 1 auto;
  width: 0;
  max-width: 43.25em;

  &:not(:last-child) {
    margin-right: .25em;
  }

  select {
    min-width: 3.5em;
    max-width: 7em;
    flex: 1 1 auto;
    width: auto;

    &:not(:last-of-type) {
      margin-right: .25em;
    }
  }
}

form[name=form_timerangepickercustom_graphite] {
  min-width: 21em;

  .control-label-group {
    text-align: left;
  }

  input[type=date] {
    min-width: 11em;
  }

  input[type=time] {
    min-width: 5em;
  }
}

.flyover[id^="graphite-customrange-"] {
  display: inline-block;
}

.grid-item {
  display: inline-block;
  border-radius: .25em;
  border: 1px solid @gray-lighter;
  min-width: 302px;
  vertical-align: top;
  margin-right: 1em;
  margin-bottom: 1em;
}

.grid-item  h2 {
  margin-top: 0;
  background: @gray-lightest;
  border-bottom: 1px solid @gray-lighter;
  padding:.25em .5em;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.grid-item > .images:not(:last-child) {
  margin-right: 1em;
  display: inline-block;
}

.grid-item .graphiteImg {
  margin-right: 1px;
}

.grid-item > p {
  padding: .5em;
  margin-bottom: 0;
}

p.load-more {
  margin-right: 1em;
  text-align: right;
}

